# interview-assignment-public

./: .env.ci  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  trivy.yaml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci-push.yml  ci.yml
alembic/: env.py
alembic/versions/: 2e2901cb2668_basemodel.py  b8c69d22d9d6_test.py
fastapi_microservice/: main.py  settings.py
fastapi_microservice/management/: aws.py  create_asymmetric_keys.py  serve.py  utils.py
fastapi_microservice/models/: base.py
interview_assignment/: main.py  settings.py  utils.py  websockets.py
interview_assignment/management/: main.py  monitor_sns_topic.py  send_sqs_message.py  serve.py  utils.py
interview_assignment/types/: __init__.py  aws.py
tests/: conftest.py  test_main.py
typings/asyncpg/: __init__.pyi  _asyncio_compat.pyi  cluster.pyi  compat.pyi  connect_utils.pyi  connection.pyi  connresource.pyi  cursor.pyi  introspection.pyi  pool.pyi  prepared_stmt.pyi  serverversion.pyi  transaction.pyi  types.pyi
typings/asyncpg/_testbase/: __init__.pyi  fuzzer.pyi
typings/asyncpg/exceptions/: __init__.pyi  _base.pyi
typings/asyncpg/pgproto/: pgproto.pyi  types.pyi
typings/asyncpg/protocol/: __init__.pyi  protocol.pyi
