[tool.poetry]
name = "fastapi-microservice"
version = "0.6.8a0"
description = "WePositive FastAPI Microservice Repository"
authors = ["Dolf Andringa <dolf@wepositive.energy>"]
readme = "README.md"
packages = [{include = "fastapi_microservice"}]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "wepositive_aws"
url = "https://repositories-354918389256.d.codeartifact.eu-west-1.amazonaws.com/pypi/python/simple"
priority="supplemental"

[[tool.poetry.source]]
name = "wepositive_aws_publish"
url = "https://repositories-354918389256.d.codeartifact.eu-west-1.amazonaws.com/pypi/python"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
pydantic = "^2.11.7"
pydantic-settings = {extras = ["dotenv"], version = "^2.10.1"}
pyjwt = "^2.10.1"
sqlmodel = "^0.0.24"
typer = "^0.15.4"
bcrypt = "^4.3.0"
structlog = "^25.4.0"
asyncpg = "^0.30.0"
uvicorn = "^0.34.3"
alembic = "^1.16.1"
psycopg2-binary = "^2.9.10"
httpx = "^0.28.1"
wepositive-types = {version = "^0.5.0a9", source = "wepositive_aws"}

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.3.3"
pyright = ">=1.1.320"
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.11.1"
ruff = ">=0.0.283"
respx = "^0.22.0"
pytest-asyncio = "^0.26.0"
gevent = "^25.5.1"
boto3 = "^1.39.0"
boto3-stubs = {extras = ["full"], version = "^1.39.3"}

[tool.poetry.scripts]
management = "fastapi_microservice.management.main:app"
create_asymmetric_keys = "fastapi_microservice.management.create_asymmetric_keys:app"
serve = "fastapi_microservice.management.serve:app"
aws = "fastapi_microservice.management.aws:app"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
stubPath = "./typings"
reportImportCycles = false
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."
exclude = [
    "./typings/*",
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "alembic/*",
]


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov",
    "--ignore=package",
    "--ignore=alembic",
    "--ignore=dist"
]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"

[tool.coverage.run]
branch = true
source = ["./fastapi_microservice"]
omit = [
    "fastapi_microservice/management/*"
]
concurrency = ["gevent"]

[tool.coverage.report]
exclude_also = [
    "if .*TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "@abstractmethod",
    "@abc.abstractmethod",
]
fail_under = 100
show_missing = true

[tool.ruff.lint]
ignore = ["PT013"]
select = ["E4", "E7", "E9", "F", "BLE","ASYNC","DTZ","C4","T10","T20","PTH","UP","I","LOG","G","PT"]
extend-safe-fixes = ["UP"]


[tool.ruff]
extend-exclude = [
    "typings/*",
    "alembic/*",
]
