[tool.poetry]
name = "interview-assignment"
version = "0.6.8a0"
description = "WePositive FastAPI Microservice Repository"
authors = ["Dolf Andringa <dolf@wepositive.energy>"]
readme = "README.md"
packages = [{include = "interview_assignment"}]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
pydantic = "^2.11.7"
pydantic-settings = {extras = ["dotenv"], version = "^2.10.1"}
typer = "^0.15.4"
bcrypt = "^4.3.0"
structlog = "^25.4.0"
uvicorn = "^0.34.3"
httpx = "^0.28.1"
aioboto3 = "^15.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.3.3"
pyright = ">=1.1.320"
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.11.1"
ruff = ">=0.0.283"
respx = "^0.22.0"
pytest-asyncio = "^0.26.0"
gevent = "^25.5.1"
moto = {extras = ["server"], version = "^5.1.10"}
types-aioboto3 = {extras = ["essential", "sns", "sqs"], version = "^15.0.0"}

[tool.poetry.scripts]
management = "interview_assignment.management.main:app"
serve = "interview_assignment.management.serve:app"
monitor_sns_topic = "interview_assignment.management.monitor_sns_topic:main"
send_sqs_message = "interview_assignment.management.send_sqs_message:app"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
stubPath = "./typings"
reportImportCycles = false
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."
exclude = [
    "./typings/*",
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "alembic/*",
]


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov",
    "--ignore=package",
    "--ignore=alembic",
    "--ignore=dist"
]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"

[tool.coverage.run]
branch = true
source = ["./interview_assignment"]
omit = [
    "interview_assignment/management/*",
    "interview_assignment/types/aws.py"
]
concurrency = ["thread", "gevent"]

[tool.coverage.report]
exclude_also = [
    "if .*TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "@abstractmethod",
    "@abc.abstractmethod",
]
fail_under = 80
show_missing = true

[tool.ruff.lint]
ignore = ["PT013", "G004"]
select = ["E4", "E7", "E9", "F", "BLE","ASYNC","DTZ","C4","T10","T20","PTH","UP","I","LOG","G","PT"]
extend-safe-fixes = ["UP"]


[tool.ruff]
extend-exclude = [
    "typings/*",
    "alembic/*",
]
